fix: rate__tips--bottom z-index (#1837)
* fix: rate__tips--bottom z-index

* feat: move z-index to tips

--- a/style/mobile/components/rate/v2/_index.less
+++ b/style/mobile/components/rate/v2/_index.less
@@ -114,6 +114,7 @@
     box-shadow: @shadow-1;
     background-color: @bg-color-container;
     transform: translateX(-50%);
+    z-index: 1;
 
     &--bottom {
       top: calc(100% + 8px);
